# mcintegration

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/: mc_integration.h
src/: mc_integration.cpp  mc_integration.h  multi_dim.cpp  pi.cpp  time_measure.cpp
